-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
[22436.335151] LustreError: 37822:0:(service.c:1329:ptlrpc_at_remove_timed()) ASSERTION( !list_empty(&req->rq_srv.sr_timed_list) ) failed: [22436.349510] LustreError: 37822:0:(service.c:1329:ptlrpc_at_remove_timed()) LBUG [22436.357777] Pid: 37822, comm: ldlm_cn01_011 4.18.0-305.10.2.x6.1.010.21.x86_64 #1 SMP Thu Aug 11 16:19:44 MDT 2022 [22436.369076] Call Trace TBD: [22436.372861] [<0>] libcfs_call_trace+0x6f/0x90 [libcfs] [22436.378951] [<0>] lbug_with_loc+0x43/0x80 [libcfs] [22436.384868] [<0>] ptlrpc_at_remove_timed+0xc3/0xd0 [ptlrpc] [22436.391402] [<0>] ptlrpc_server_drop_request+0x117/0x750 [ptlrpc] [22436.398436] [<0>] ptlrpc_main+0x121c/0x1560 [ptlrpc] [22436.404296] [<0>] kthread+0x116/0x130 [22436.408843] [<0>] ret_from_fork+0x1f/0x40 [22436.413719] Kernel panic - not syncing: LBUG
- is related to
-
LU-17314 ASSERTION( !list_empty(&req->rq_srv.sr_timed_list) ) failed:
-
- Resolved
-